ELS Code/main/default/objects/Search_Climber__c/Search_Climber__c.object-meta.xml
<CustomObject>
    <label>Search Climber</label>
    <nameField>
        <displayFormat>SCN-{00000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Search Climbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>