ELS Code/main/default/objects/Search_Climber__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <label>Address 1</label>
    <length>225</length>
    <type>Text</type>
</CustomField>