ELS Code/main/default/objects/Search_Climber__c/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <label>Address 2</label>
    <length>225</length>
    <type>Text</type>
</CustomField>