ELS Code/main/default/objects/Search_Climber__c/fields/Best_Time_To_Call__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_To_Call__c</fullName>
    <label>Best Time To Call</label>
    <length>225</length>
    <type>Text</type>
</CustomField>