ELS Code/main/default/objects/Search_Climber__c/fields/Best_Time_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Contact__c</fullName>
    <label>Best Time to Contact</label>
    <length>225</length>
    <type>Text</type>
</CustomField>