ELS Code/main/default/objects/Search_Climber__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>225</length>
    <type>Text</type>
</CustomField>