ELS Code/main/default/objects/Search_Climber__c/fields/Credit_Union__c.field-meta.xml
<CustomField>
    <fullName>Credit_Union__c</fullName>
    <label>Credit Union</label>
    <length>255</length>
    <type>Text</type>
</CustomField>