ELS Code/main/default/objects/Search_Climber__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>First Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>