ELS Code/main/default/objects/Search_Climber__c/fields/FLAS_2__c.field-meta.xml
<CustomField>
    <fullName>FLAS_2__c</fullName>
    <formula>MID(First_Name__c  , 0, 1) &amp; MID(Last_Name__c , 0, 6)&amp; MID(Address_2__c  , 0, 9) &amp;  State__c</formula>
    <label>FLAS 2</label>
    <type>Text</type>
</CustomField>