ELS Code/main/default/objects/Search_Climber__c/fields/Form_Location__c.field-meta.xml
<CustomField>
    <fullName>Form_Location__c</fullName>
    <label>Form Location</label>
    <length>225</length>
    <type>Text</type>
</CustomField>