ELS Code/main/default/objects/Search_Climber__c/fields/Form_Url__c.field-meta.xml
<CustomField>
    <fullName>Form_Url__c</fullName>
    <label>Form Url</label>
    <length>225</length>
    <type>Text</type>
</CustomField>