ELS Code/main/default/objects/Search_Climber__c/fields/IA_Info__c.field-meta.xml
<CustomField>
    <fullName>IA_Info__c</fullName>
    <label>IA Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>