ELS Code/main/default/objects/Search_Climber__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <label>IP Address</label>
    <length>225</length>
    <type>Text</type>
</CustomField>