ELS Code/main/default/objects/Search_Climber__c/fields/LAZ_2__c.field-meta.xml
<CustomField>
    <fullName>LAZ_2__c</fullName>
    <formula>MID(  Last_Name__c , 0, 6) &amp; MID(  Address_2__c , 0, 9) &amp; MID(  Zip__c , 0, 5)</formula>
    <label>LAZ 2</label>
    <type>Text</type>
</CustomField>