ELS Code/main/default/objects/Search_Climber__c/fields/Origination__c.field-meta.xml
<CustomField>
    <fullName>Origination__c</fullName>
    <label>Origination</label>
    <length>225</length>
    <type>Text</type>
</CustomField>