ELS Code/main/default/objects/Search_Climber__c/fields/Own_RV__c.field-meta.xml
<CustomField>
    <fullName>Own_RV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Own RV?</label>
    <type>Checkbox</type>
</CustomField>