ELS Code/main/default/objects/Search_Climber__c/fields/PF__c.field-meta.xml
<CustomField>
    <fullName>PF__c</fullName>
    <formula>Phone__c  &amp;  First_Name__c</formula>
    <label>PF</label>
    <type>Text</type>
</CustomField>