ELS Code/main/default/objects/Search_Climber__c/fields/Pin_Number__c.field-meta.xml
<CustomField>
    <fullName>Pin_Number__c</fullName>
    <label>Pin Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>