ELS Code/main/default/objects/Search_Climber__c/fields/Pulled__c.field-meta.xml
<CustomField>
    <fullName>Pulled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pulled?</label>
    <type>Checkbox</type>
</CustomField>