ELS Code/main/default/objects/Search_Climber__c/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <label>Referrer</label>
    <length>225</length>
    <type>Text</type>
</CustomField>