ELS Code/main/default/objects/Search_Climber__c/fields/RV_Number__c.field-meta.xml
<CustomField>
    <fullName>RV_Number__c</fullName>
    <label>RV Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>