ELS Code/main/default/objects/Search_Climber__c/fields/Want_Brochure__c.field-meta.xml
<CustomField>
    <fullName>Want_Brochure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Want Brochure?</label>
    <type>Checkbox</type>
</CustomField>