ELS Code/main/default/objects/Search_Climber__c/fields/Want_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Want_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Want Newsletter?</label>
    <type>Checkbox</type>
</CustomField>