ELS Code/main/default/objects/Search_Climber__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <length>225</length>
    <type>Text</type>
</CustomField>