ELS Code/main/default/objects/Search_Climber__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Lead_ID__c</columns>
    <columns>Source_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Is_Processed__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>